charts/apps/media-server/templates/plexIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: plex
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - plex.visar.cloud
  rules:
    - host: plex.visar.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: plex
                port:
                  number: 32400
