charts/apps/media-server/templates/transmissionIngress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - transmission.visar.cloud
  rules:
    - host: transmission.visar.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission
                port:
                  number: 9091
